# unfuckify

./: .clang-format  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CMakeLists.txt  CMakePresets.json  Dockerfile  HISTORY.md  README.md  main.cpp
.github/: not_ci.yml
.github/workflows/: ci.yml  release.yml
src/: format.h  main.cpp  unfucker.cpp
tests/: CMakeLists.txt  test_executable.cpp
tests/data/: lambda.cpp  lambda_fixed.cpp
